force-app/main/default/objects/Contact/fields/AgentWise_IL__Smoker_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Smoker_Mandatory__c</fullName>
    <description>Used for simulator prat to enforce fill value for smoking</description>
    <label>Smoker Mandatory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Smoking</fullName>
            </value>
            <value>
                <fullName>Not Smoking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>