force-app/main/default/objects/Contact/fields/AgentWise_IL__Source_Lead__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Source_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ליד מקור - יוצר איש הקשר ע&quot;י כפתור &quot;המרת הצעה&quot;</description>
    <inlineHelpText>ליד מקור - יוצר איש הקשר ע&quot;י כפתור &quot;המרת הצעה&quot;</inlineHelpText>
    <label>Source Lead</label>
    <referenceTo>AgentWise_IL__Lead__c</referenceTo>
    <relationshipLabel>אנשי קשר</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>