force-app/main/default/objects/Contact/fields/AgentWise_IL__SSN__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__SSN__c</fullName>
    <description>Change size to 15 in order to support passport numbers.
Change size to 16 in order to support November 15 Otzar modification.</description>
    <label>SSN</label>
    <length>16</length>
    <type>Text</type>
</CustomField>