force-app/main/default/objects/Contact/fields/AgentWise_IL__Tier__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Tier__c</fullName>
    <label>Tier</label>
    <type>TextArea</type>
</CustomField>