force-app/main/default/objects/Contact/fields/Agreed_join_marketing_mailing__c.field-meta.xml
<CustomField>
    <fullName>Agreed_join_marketing_mailing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>לקוח הסכים להצטרף לרשימת תפוצת שיווק</description>
    <label>לקוח הסכים להצטרף לרשימת תפוצת שיווק</label>
    <type>Checkbox</type>
</CustomField>