force-app/main/default/objects/Contact/fields/Anti_Validate__c.field-meta.xml
<CustomField>
    <fullName>Anti_Validate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anti Validate</label>
    <type>Checkbox</type>
</CustomField>