force-app/main/default/objects/Contact/fields/BRZ__c.field-meta.xml
<CustomField>
    <fullName>BRZ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sharing with Bar ziv Ravid</description>
    <inlineHelpText>משותף עם בר זיו רביד</inlineHelpText>
    <label>BRZ</label>
    <type>Checkbox</type>
</CustomField>