force-app/main/default/objects/Contact/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potencial</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Not Active</fullName>
            </value>
            <value>
                <fullName>May be Not Active</fullName>
            </value>
            <value>
                <fullName>לא פעיל - עבר לסוכן אחר</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>