force-app/main/default/objects/Contact/fields/Count_Same_SSN_records__c.field-meta.xml
<CustomField>
    <fullName>Count_Same_SSN_records__c</fullName>
    <label>Count Same SSN records</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>