force-app/main/default/objects/Contact/fields/Cust_Overview__Has_Abroad_Manage_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Cust_Overview__Has_Abroad_Manage_Portfolio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Abroad Manage Portfolio</label>
    <type>Checkbox</type>
</CustomField>