force-app/main/default/objects/Contact/fields/Customer_has_signed__c.field-meta.xml
<CustomField>
    <fullName>Customer_has_signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>לקוח חתם על הודעת פרטיות</description>
    <label>לקוח חתם על הודעת פרטיות</label>
    <type>Checkbox</type>
</CustomField>