force-app/main/default/objects/Contact/fields/Customer_Image__c.field-meta.xml
<CustomField>
    <fullName>Customer_Image__c</fullName>
    <formula>HYPERLINK(&quot;https://howdenil--cust-overview.visualforce.com/apex/ClientOverview?insuredId=&quot;  &amp; Id ,&quot;Image&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Image</label>
    <type>Text</type>
</CustomField>