force-app/main/default/objects/Contact/fields/Didnt_agree_to_sign__c.field-meta.xml
<CustomField>
    <fullName>Didnt_agree_to_sign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>לקוח לא הסכים לחתום על הודעת פרטיות</description>
    <label>לקוח לא הסכים לחתום על הודעת פרטיות</label>
    <type>Checkbox</type>
</CustomField>