force-app/main/default/objects/Contact/fields/Didnt_agreed_to_join_marketing_mailing__c.field-meta.xml
<CustomField>
    <fullName>Didnt_agreed_to_join_marketing_mailing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>לקוח לא הסכים להצטרף לרשימת תפוצת שיווק</description>
    <label>לקוח לא הסכים להצטרף לרשימת תפוצת שיווק</label>
    <type>Checkbox</type>
</CustomField>