force-app/main/default/objects/Contact/fields/Doco_Wise_Sender__c.field-meta.xml
<CustomField>
    <fullName>Doco_Wise_Sender__c</fullName>
    <label>Doco Wise Sender</label>
    <length>20</length>
    <type>Text</type>
</CustomField>