force-app/main/default/objects/Contact/fields/Driver_License_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Driver_License_Issue_Date__c</fullName>
    <label>Driver License Issue Date</label>
    <type>Date</type>
</CustomField>