force-app/main/default/objects/Contact/fields/Flag_Formula_Claim_Contact__c.field-meta.xml
<CustomField>
    <fullName>Flag_Formula_Claim_Contact__c</fullName>
    <formula>Account.Flag_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>סטטוס תביעות</label>
    <type>Text</type>
</CustomField>