force-app/main/default/objects/Contact/fields/Flow_Creation__c.field-meta.xml
<CustomField>
    <fullName>Flow_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow Creation</label>
    <type>Checkbox</type>
</CustomField>