force-app/main/default/objects/Contact/fields/Generate_Doco_From_Upload__c.field-meta.xml
<CustomField>
    <fullName>Generate_Doco_From_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Doco From Upload</label>
    <type>Checkbox</type>
</CustomField>