force-app/main/default/objects/Contact/fields/Has_Email__c.field-meta.xml
<CustomField>
    <fullName>Has_Email__c</fullName>
    <formula>IF( NOT(OR(ISBLANK(Email ) , ISNULL( Email ) )), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Email</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>