force-app/main/default/objects/Contact/fields/HasActivePolicy__c.field-meta.xml
<CustomField>
    <fullName>HasActivePolicy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>לסימון מחלקת הכספים לטובת מיילים בזמן הקורונה</description>
    <label>HasActivePolicy</label>
    <type>Checkbox</type>
</CustomField>