force-app/main/default/objects/Contact/fields/inforemediation__c.field-meta.xml
<CustomField>
    <fullName>inforemediation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>טיוב אנשי קשר 8.22</description>
    <label>בוצע טיוב</label>
    <type>Checkbox</type>
</CustomField>