force-app/main/default/objects/Contact/fields/INSINF__Id_Issuing_Date__c.field-meta.xml
<CustomField>
    <fullName>INSINF__Id_Issuing_Date__c</fullName>
    <label>Id Issuing Date</label>
    <type>Date</type>
</CustomField>