force-app/main/default/objects/Contact/fields/INSINF__Include_Family_Data__c.field-meta.xml
<CustomField>
    <fullName>INSINF__Include_Family_Data__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include Family Data</label>
    <type>Checkbox</type>
</CustomField>