force-app/main/default/objects/Contact/fields/INSINF__Include_PDF_Report__c.field-meta.xml
<CustomField>
    <fullName>INSINF__Include_PDF_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include PDF Report</label>
    <type>Checkbox</type>
</CustomField>