force-app/main/default/objects/Contact/fields/INSINF__Polywizz_Last_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>INSINF__Polywizz_Last_Client_Id__c</fullName>
    <label>Polywizz Last Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>