force-app/main/default/objects/Contact/fields/is_Howden_Employee__c.field-meta.xml
<CustomField>
    <fullName>is_Howden_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Howden Employee</label>
    <type>Checkbox</type>
</CustomField>