force-app/main/default/objects/Contact/fields/isDataFromUserRecord__c.field-meta.xml
<CustomField>
    <fullName>isDataFromUserRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDataFromUserRecord</label>
    <type>Checkbox</type>
</CustomField>