force-app/main/default/objects/Contact/fields/Key_Person_Type__c.field-meta.xml
<CustomField>
    <fullName>Key_Person_Type__c</fullName>
    <label>Key Person Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ללא פוליסות נוספות</fullName>
            </value>
            <value>
                <fullName>עם פוליסות נוספות</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>