force-app/main/default/objects/Contact/fields/Last_Signature_Link_For_Sms_To_Client__c.field-meta.xml
<CustomField>
    <fullName>Last_Signature_Link_For_Sms_To_Client__c</fullName>
    <label>Last Signature Link For Sms To Client</label>
    <length>150</length>
    <type>Text</type>
</CustomField>