force-app/main/default/objects/Contact/fields/Latest_HPC_Policy__c.field-meta.xml
<CustomField>
    <fullName>Latest_HPC_Policy__c</fullName>
    <label>Latest HPC Policy</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>