force-app/main/default/objects/Contact/fields/Main_Client_SSN__c.field-meta.xml
<CustomField>
    <fullName>Main_Client_SSN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Client SSN</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>אנשי קשר עם תז זהה</relationshipLabel>
    <relationshipName>CONTACTg76U</relationshipName>
    <type>Lookup</type>
</CustomField>