force-app/main/default/objects/Contact/fields/Menahel_Tik_Pensiony__c.field-meta.xml
<CustomField>
    <fullName>Menahel_Tik_Pensiony__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Menahel Tik Pensiony</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MenahelTikPensionyContact</relationshipName>
    <type>Lookup</type>
</CustomField>