force-app/main/default/objects/Contact/fields/Nilibit_Status__c.field-meta.xml
<CustomField>
    <fullName>Nilibit_Status__c</fullName>
    <label>Nilibit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nilibit_Status</valueSetName>
    </valueSet>
</CustomField>