force-app/main/default/objects/Contact/fields/No_Cellular_phone__c.field-meta.xml
<CustomField>
    <fullName>No_Cellular_phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ללקוח אין טלפון נייד</label>
    <type>Checkbox</type>
</CustomField>