force-app/main/default/objects/Contact/fields/NoEmail__c.field-meta.xml
<CustomField>
    <fullName>NoEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ללקוח אין דואר אלקטרוני</label>
    <type>Checkbox</type>
</CustomField>