force-app/main/default/objects/Contact/fields/NotActive__c.field-meta.xml
<CustomField>
    <fullName>NotActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>לא פעיל</label>
    <type>Checkbox</type>
</CustomField>