force-app/main/default/objects/Contact/fields/Novidea_HPC__Active__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>