force-app/main/default/objects/Contact/fields/Novidea_HPC__AssociatedPersonRTID__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__AssociatedPersonRTID__c</fullName>
    <label>AssociatedPersonRTID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>