force-app/main/default/objects/Contact/fields/Novidea_HPC__SSN__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__SSN__c</fullName>
    <label>SSN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>