force-app/main/default/objects/Contact/fields/Novidea_HPC__ValidationControl__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__ValidationControl__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ValidationControl</label>
    <type>Checkbox</type>
</CustomField>