force-app/main/default/objects/Contact/fields/NOVIPROD__SSN_4_Last_Digits__c.field-meta.xml
<CustomField>
    <fullName>NOVIPROD__SSN_4_Last_Digits__c</fullName>
    <label>SSN 4 Last Digits</label>
    <length>4</length>
    <type>Text</type>
</CustomField>