force-app/main/default/objects/Contact/fields/Otzar_Interface__Collective_Employees_City__c.field-meta.xml
<CustomField>
    <fullName>Otzar_Interface__Collective_Employees_City__c</fullName>
    <label>Collective Employees City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>