force-app/main/default/objects/Contact/fields/Otzar_Interface__Collective_Employees_Email__c.field-meta.xml
<CustomField>
    <fullName>Otzar_Interface__Collective_Employees_Email__c</fullName>
    <label>מייל מקובץ עובדים</label>
    <type>Email</type>
</CustomField>