force-app/main/default/objects/Contact/fields/Otzar_Interface__Collective_Employees_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Otzar_Interface__Collective_Employees_Mobile__c</fullName>
    <label>טלפון מקובץ עובדים</label>
    <type>Phone</type>
</CustomField>