force-app/main/default/objects/Contact/fields/Otzar_Interface__Collective_Employees_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Otzar_Interface__Collective_Employees_PostalCode__c</fullName>
    <label>Collective Employees PostalCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>