force-app/main/default/objects/Contact/fields/Otzar_Interface__Collective_Employees_Street__c.field-meta.xml
<CustomField>
    <fullName>Otzar_Interface__Collective_Employees_Street__c</fullName>
    <label>Collective Employees Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>