force-app/main/default/objects/Contact/fields/Otzar_Interface__Comment__c.field-meta.xml
<CustomField>
    <fullName>Otzar_Interface__Comment__c</fullName>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>