force-app/main/default/objects/Contact/fields/Otzar_Interface__Contact_OID__c.field-meta.xml
<CustomField>
    <fullName>Otzar_Interface__Contact_OID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Contact OID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>