force-app/main/default/objects/Contact/fields/Otzar_Interface__Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Otzar_Interface__Date_Of_Birth__c</fullName>
    <description>נוסף במסגרת אפיון הגדרות אוצר נובמבר 2015</description>
    <label>תאריך לידה</label>
    <type>Date</type>
</CustomField>