force-app/main/default/objects/Contact/fields/Otzar_Interface__Email_from_Simulator__c.field-meta.xml
<CustomField>
    <fullName>Otzar_Interface__Email_from_Simulator__c</fullName>
    <label>Email from Simulator</label>
    <length>80</length>
    <type>Text</type>
</CustomField>