force-app/main/default/objects/Contact/fields/Otzar_Interface__Id_Type__c.field-meta.xml
<CustomField>
    <fullName>Otzar_Interface__Id_Type__c</fullName>
    <description>DON&apos;T USE!!!
This field is deprecated in favor of AgentWise_IL__Id_Type__c and will be removed in future versions.</description>
    <inlineHelpText>DON&apos;T USE!!!
This field is deprecated in favor of AgentWise_IL__Id_Type__c and will be removed in future versions.</inlineHelpText>
    <label>DEPRECATED</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>תעודת זהות</fullName>
            </value>
            <value>
                <fullName>דרכון</fullName>
            </value>
            <value>
                <fullName>תאגיד</fullName>
            </value>
            <value>
                <fullName>אחר</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>