force-app/main/default/objects/Contact/fields/Otzar_Interface__Last_Load_Participant_Role__c.field-meta.xml
<CustomField>
    <fullName>Otzar_Interface__Last_Load_Participant_Role__c</fullName>
    <label>Last Load Participant Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Beneficiary</fullName>
            </value>
            <value>
                <fullName>Dependent Insured</fullName>
            </value>
            <value>
                <fullName>Insured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>