force-app/main/default/objects/Contact/fields/Otzar_Interface__Last_Modified_By_Load_Date__c.field-meta.xml
<CustomField>
    <fullName>Otzar_Interface__Last_Modified_By_Load_Date__c</fullName>
    <description>The date/time of the last modification for the record by the load</description>
    <label>Last Modified By Load Date</label>
    <type>DateTime</type>
</CustomField>