force-app/main/default/objects/Contact/fields/Otzar_Interface__Locality_Code__c.field-meta.xml
<CustomField>
    <fullName>Otzar_Interface__Locality_Code__c</fullName>
    <label>Locality Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>