force-app/main/default/objects/Contact/fields/Otzar_Interface__Mobile_or_Email_Different__c.field-meta.xml
<CustomField>
    <fullName>Otzar_Interface__Mobile_or_Email_Different__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile or Email Different</label>
    <type>Checkbox</type>
</CustomField>