force-app/main/default/objects/Contact/fields/Otzar_Interface__Mobile_Phone_from_Simulator__c.field-meta.xml
<CustomField>
    <fullName>Otzar_Interface__Mobile_Phone_from_Simulator__c</fullName>
    <label>Mobile Phone from Simulator</label>
    <length>40</length>
    <type>Text</type>
</CustomField>