force-app/main/default/objects/Contact/fields/Otzar_Interface__Previous_Family_Name__c.field-meta.xml
<CustomField>
    <fullName>Otzar_Interface__Previous_Family_Name__c</fullName>
    <description>נוסף במסגרת אפיון הגדרות אוצר נובמבר 2015</description>
    <label>שם משפחה קודם</label>
    <length>30</length>
    <type>Text</type>
</CustomField>