force-app/main/default/objects/Contact/fields/Otzar_Interface__Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Otzar_Interface__Source_Type__c</fullName>
    <description>מקור המידע ממנו הגיע החשבון (ב-default רק אוצר, סוכניות שיש להם מערכות חיצוניות נוספות יכולות להוסיף לפי ראות עיניהן)</description>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Otzar</fullName>
            </value>
            <value>
                <fullName>Manaully</fullName>
                <default>true</default>
                <label>Manaully</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>