force-app/main/default/objects/Contact/fields/Otzar_Interface__Worker_number__c.field-meta.xml
<CustomField>
    <fullName>Otzar_Interface__Worker_number__c</fullName>
    <label>מספר עובד</label>
    <length>50</length>
    <type>Text</type>
</CustomField>