force-app/main/default/objects/Contact/fields/Rollup_Premium_ILS__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Premium_ILS__c</fullName>
    <label>Rollup Premium ILS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>