force-app/main/default/objects/Contact/fields/Send_Doco_Flag__c.field-meta.xml
<CustomField>
    <fullName>Send_Doco_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Doco Flag</label>
    <type>Checkbox</type>
</CustomField>