force-app/main/default/objects/Contact/fields/Send_Doco_Form_Time__c.field-meta.xml
<CustomField>
    <fullName>Send_Doco_Form_Time__c</fullName>
    <label>Send Doco Form Time</label>
    <type>DateTime</type>
</CustomField>