force-app/main/default/objects/Contact/fields/Source_Shefi_Employee_Record__c.field-meta.xml
<CustomField>
    <fullName>Source_Shefi_Employee_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Shefi Employee Record</label>
    <referenceTo>Product_Related_Entity__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>