force-app/main/default/objects/Contact/fields/SSN_is_9_digits__c.field-meta.xml
<CustomField>
    <fullName>SSN_is_9_digits__c</fullName>
    <formula>IF(LEN(Novidea_HPC__SSN__c) == 9, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SSN is 9 digits</label>
    <type>Checkbox</type>
</CustomField>