force-app/main/default/objects/Contact/fields/Stored_Duplicate_SSN__c.field-meta.xml
<CustomField>
    <fullName>Stored_Duplicate_SSN__c</fullName>
    <label>Stored Duplicate SSN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>