force-app/main/default/objects/Contact/fields/Wise_Active_Alternative_Investments__c.field-meta.xml
<CustomField>
    <fullName>Wise_Active_Alternative_Investments__c</fullName>
    <label>Wise Active Alternative Investments</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>