force-app/main/default/objects/Contact/fields/Wise_Active_Individual_Care__c.field-meta.xml
<CustomField>
    <fullName>Wise_Active_Individual_Care__c</fullName>
    <label>Wise Active Individual Care</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>