force-app/main/default/objects/Contact/fields/Wise_Active_Key_Person_Policies_Count__c.field-meta.xml
<CustomField>
    <fullName>Wise_Active_Key_Person_Policies_Count__c</fullName>
    <label>Wise Active Key Person Policies Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>