force-app/main/default/objects/Contact/fields/Wise_Activity__c.field-meta.xml
<CustomField>
    <fullName>Wise_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wise Activity</label>
    <type>Checkbox</type>
</CustomField>