force-app/main/default/objects/Contact/fields/Wise_Another_Email__c.field-meta.xml
<CustomField>
    <fullName>Wise_Another_Email__c</fullName>
    <label>Wise Another Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>