force-app/main/default/objects/Contact/fields/Wise_Count_As_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Wise_Count_As_Secondary__c</fullName>
    <label>Wise Count As Secondary</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>