force-app/main/default/objects/Contact/fields/Wise_Executive_Insurance_Active__c.field-meta.xml
<CustomField>
    <fullName>Wise_Executive_Insurance_Active__c</fullName>
    <label>Wise Executive Insurance Active</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>