force-app/main/default/objects/Contact/fields/Wise_Future_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Wise_Future_Meeting_Date__c</fullName>
    <label>Wise Future Meeting Date</label>
    <type>Date</type>
</CustomField>