force-app/main/default/objects/Contact/fields/Wise_Interested_In_Service_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Wise_Interested_In_Service_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wise Interested In Service Meeting</label>
    <type>Checkbox</type>
</CustomField>